--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
