--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/averia-serif-libre": "^4.5.1",
+    "@fontsource/fugaz-one": "^4.5.1",
+    "@fontsource/laila": "^4.5.1",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.4.1",
