--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@fontsource/averia-serif-libre": "^4.5.1",
     "@fontsource/fugaz-one": "^4.5.1",
     "@fontsource/laila": "^4.5.1",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.1",
-    "@mui/styles": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
