--- a/package.json
+++ b/package.json
@@ -1,30 +1,53 @@
 {
-  "name": "node_passport_login",
-  "version": "2.0.0",
-  "description": "Node.js authentication with Passport",
-  "main": "app.js",
-  "scripts": {
-    "start": "concurrently \"node backend/app.js\" \"npm run frontend\"",
-    "starts": "cd backend && nodemon app.js",
-    "frontend": "cd frontend && yarn start",
-    "dev": "nodemon app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "hulo",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^7.0.0",
-    "connect-flash": "^0.1.1",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "express-ejs-layouts": "^2.5.0",
-    "express-session": "^1.15.6",
-    "mongoose": "^5.7.5",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "@date-io/date-fns": "1.x",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/averia-serif-libre": "^4.5.1",
+    "@fontsource/fugaz-one": "^4.5.1",
+    "@fontsource/laila": "^4.5.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.3"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
