--- a/package.json
+++ b/package.json
@@ -1,53 +1,16 @@
 {
-  "name": "hulo",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "@date-io/date-fns": "1.x",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/averia-serif-libre": "^4.5.1",
-    "@fontsource/fugaz-one": "^4.5.1",
-    "@fontsource/laila": "^4.5.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/pickers": "^3.3.10",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "date-fns": "^2.28.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "reactstrap": "^9.0.1",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
+    "googleapis": "^96.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.6",
+    "node-fetch": "^3.2.3",
+    "nodemailer": "^6.7.2"
   }
 }
