--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "mongoose": "^6.2.6",
     "node-fetch": "^3.2.3",
     "nodemailer": "^6.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
