--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URL=mongodb+srv://garett:12312678@cluster0.n1iae.mongodb.net/hulo?retryWrites=true&w=majority
+
+ACTIVATION_TOKEN_SECRET = jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
