backend: verification email
Change-Id: I56258f08f82f18dffdb522b61aabfd38bc7a39e2

--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
-MONGODB_URL=mongodb+srv://garett:12312678@cluster0.n1iae.mongodb.net/hulo?retryWrites=true&w=majority
+MONGODB_URL= mongodb+srv://garett:12312678@cluster0.n1iae.mongodb.net/hulo?retryWrites=true&w=majority
 
-ACTIVATION_TOKEN_SECRET = jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
+ACTIVATION_TOKEN_SECRET= jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
+
+ACCESS_TOKEN_SECRET= 5.W<2e"`xR2-Mf`*R&8^`pt5kk%m&k.S8a/vq@!qNNum5NTb=E
+
+REFRESH_TOKEN_SECRET= wBzS.a@L>CbnTVb!}"nE},xuzswLWudnx8"?yMGL[B*HgqD6GHza/jcmuh6T3(d266'sQPQYJEgqAh.ZYBJ#>aG6T*G,BL%8}}[a
+
+CLIENT_URL= http://localhost:3000
+
+MAILING_SERVICE_CLIENT_ID= 795147657333-r655n62jcidn1166m537bf5a0qmrjprj.apps.googleusercontent.com
+MAILING_SERVICE_CLIENT_SECRET= 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
+MAILING_SERVICE_REFRESH_TOKEN= 1//04xKDRdiijx04CgYIARAAGAQSNwF-L9IrlNaOM_7ZXs_G3z5BALRLdVmV8GVtHM0mJIHjZSX-0Xi8RmfOn0bSN-PizcCrkM2fssk
+SENDER_EMAIL_ADDRESS = huloleisurefarm.contact@gmail.com
