--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ MAILING_SERVICE_CLIENT_ID= 795147657333-r655n62jcidn1166m537bf5a0qmrjprj.apps.go
 MAILING_SERVICE_CLIENT_SECRET= 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
 MAILING_SERVICE_REFRESH_TOKEN= 1//04xKDRdiijx04CgYIARAAGAQSNwF-L9IrlNaOM_7ZXs_G3z5BALRLdVmV8GVtHM0mJIHjZSX-0Xi8RmfOn0bSN-PizcCrkM2fssk
 SENDER_EMAIL_ADDRESS = huloleisurefarm.contact@gmail.com
+
+CLOUD_NAME = dziw9efzv
+CLOUD_API_KEY = 573261545213479
+CLOUD_API_SECRET = AmW6n9UtksJu_8_ef7eWDNFaArA
