--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
+    "react-redux": "^7.2.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -52,5 +52,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:8080"
+
 }
