server: adjust the env and package.json to be more adaptive
Change-Id: I766028af1038040be31c60c8aa3b1c81a7079802

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+PORT = 8080
+NODE_ENV = DEVELOPMENT
+
 MONGODB_URL= mongodb+srv://garett:12312678@cluster0.n1iae.mongodb.net/hulo?retryWrites=true&w=majority
 
 ACTIVATION_TOKEN_SECRET= jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
