backend: redo the userModel and userControl 1/*
Change-Id: Ic6383fa976ddc081e40e3043b24b51c9c873e368

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@ MONGODB_URL= mongodb+srv://garett:12312678@cluster0.n1iae.mongodb.net/hulo?retry
 
 ACTIVATION_TOKEN_SECRET= jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
 
+JWT_SECRET= jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
+JWT_EXPIRES_TIME = 7d
+
 ACCESS_TOKEN_SECRET= 5.W<2e"`xR2-Mf`*R&8^`pt5kk%m&k.S8a/vq@!qNNum5NTb=E
 
 REFRESH_TOKEN_SECRET= wBzS.a@L>CbnTVb!}"nE},xuzswLWudnx8"?yMGL[B*HgqD6GHza/jcmuh6T3(d266'sQPQYJEgqAh.ZYBJ#>aG6T*G,BL%8}}[a
