backend: Sending JWT Token in Cookie
Change-Id: Ib11fbb613136b988df1a63b3860a08edb4fcddf7

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ ACTIVATION_TOKEN_SECRET= jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
 
 JWT_SECRET= jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
 JWT_EXPIRES_TIME = 7d
+COOKIE_EXPIRES_TIME = 7d
 
 ACCESS_TOKEN_SECRET= 5.W<2e"`xR2-Mf`*R&8^`pt5kk%m&k.S8a/vq@!qNNum5NTb=E
 
