backend: Send Password Recovery Email v2
Change-Id: I6477cddb7fda74fcd0abb2370218f5537e9275d4

--- a/.env
+++ b/.env
@@ -20,6 +20,13 @@ MAILING_SERVICE_CLIENT_SECRET= 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
 MAILING_SERVICE_REFRESH_TOKEN= 1//04YPoE4AndRSVCgYIARAAGAQSNwF-L9IrL2B8-izEExtY2NCD_s2sS0nYAJ0_Fn5DL9_bBNHO-UKR-0o-DtksILnp1Drv1sQDgZQ
 SENDER_EMAIL_ADDRESS = huloleisurefarm.contact@gmail.com
 
+SMTP_HOST = smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_EMAIL = huloleisurefarm.contact@gmail.com
+SMTP_PASS = idiatvauoqalyetr
+SMTP_FROM_EMAIL = huloleisurefarm.contact@gmail.com
+SMTP_FROM_NAME = Hulo Leisure Farm
+
 CLOUD_NAME = dziw9efzv
 CLOUD_API_KEY = 573261545213479
 CLOUD_API_SECRET = AmW6n9UtksJu_8_ef7eWDNFaArA
