--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
@@ -53,6 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8080"
-
+  "proxy": "http://localhost:8080"
 }
