--- a/client/package.json
+++ b/client/package.json
@@ -19,15 +19,17 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
