--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ ACCESS_TOKEN_SECRET= 5.W<2e"`xR2-Mf`*R&8^`pt5kk%m&k.S8a/vq@!qNNum5NTb=E
 
 REFRESH_TOKEN_SECRET= wBzS.a@L>CbnTVb!}"nE},xuzswLWudnx8"?yMGL[B*HgqD6GHza/jcmuh6T3(d266'sQPQYJEgqAh.ZYBJ#>aG6T*G,BL%8}}[a
 
-CLIENT_URL= http://localhost:3000
+CLIENT_URL= localhost:3000
+FRONTEND_URL ="http://localhost:3000"
 
 MAILING_SERVICE_CLIENT_ID= 795147657333-r655n62jcidn1166m537bf5a0qmrjprj.apps.googleusercontent.com
 MAILING_SERVICE_CLIENT_SECRET= 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
