--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "mdbreact": "^5.0.1",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -58,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://127.0.0.1:8080"
 }
