--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.1",
+    "dateformat": "^4.5.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
