--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "1.x",
+    "@date-io/date-fns": "^2.13.1",
+    "@date-io/moment": "1.x",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/averia-serif-libre": "^4.5.1",
@@ -12,14 +13,16 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.4.1",
-    "dateformat": "^4.5.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "mdbreact": "^5.0.1",
     "date-fns": "^2.28.0",
+    "dateformat": "^4.5.1",
+    "mdbreact": "^5.0.1",
+    "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
