--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.9.1",
     "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
