try to fix website
Change-Id: Iabf31d00e136c70578488bf160e714f7a9ab6936

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server.js",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server.js",
-    "seeder": "node utils/seeder.js"
+    "seeder": "node utils/seeder.js",
+    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false yarn && yarn add --cwd client && yarn build --cwd client"
   },
   "repository": {
     "type": "git",
