convert to npm?
Change-Id: Id1d24f624da565b1eda0ef763f560380822435e8

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server.js",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server.js",
     "seeder": "node utils/seeder.js",
-    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false && yarn add --cwd client && yarn build --cwd client"
+    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false && yarn add --prefix client && yarn add --prefix client"
   },
   "repository": {
     "type": "git",
