--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server.js",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server.js",
     "seeder": "node utils/seeder.js",
-    "heroku-postbuild" : "cd client && yarn && yarn build"
+    "build": "yarn build",
+    "heroku-postbuild" : "YARN_PRODUCTION=false && cd client && yarn && yarn build && yarn global add serve && serve -s build -l 3000"
   },
   "repository": {
     "type": "git",
