--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,13 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.4.1",
-    "interweave": "^12.8.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "dateformat": "^4.5.1",
+    "interweave": "^12.8.0",
     "mdbreact": "^5.0.1",
     "moment": "^2.29.2",
     "react": "^17.0.2",
@@ -29,6 +29,7 @@
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-number-format": "^4.9.1",
     "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
