add changes in build
Change-Id: Ia126eff5f5820a1c4fef4918ffb0593dccb0cbe9

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 8080
-NODE_ENV = DEVELOPMENT
+NODE_ENV = PRODUCTION
 
 MONGODB_URL= mongodb+srv://garett:12312678@cluster0.n1iae.mongodb.net/hulo?retryWrites=true&w=majority
 
