--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 8080
 NODE_ENV = PRODUCTION
 
-MONGODB_URL= mongodb+srv://garett:12312678@cluster0.n1iae.mongodb.net/hulo?retryWrites=true&w=majority
+MONGODB_URL= mongodb+srv://hulofarm:hulofarm123@cluster0.dxl39.mongodb.net/?retryWrites=true&w=majority
 
 ACTIVATION_TOKEN_SECRET= jT,`bh}"5\PZ']%RNp:La?`5=AHsacF5dxuNhY/LR]!}&7^p.C
 
