--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "dateformat": "^4.5.1",
+    "http-proxy-middleware": "^2.0.6",
     "interweave": "^12.8.0",
     "mdbreact": "^5.0.1",
     "moment": "^2.29.2",
@@ -65,6 +66,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://127.0.0.1:8080"
+  }
 }
